tools/tree-sitter/grammar.js
    source_file: $ => repeat($._item),

    // ---------------------------------------------------------------- trivia
    line_comment: _ => token(seq('//', /[^\n]*/)),
    block_comment: _ => token(seq('/*', /[^*]*\*+([^/*][^*]*\*+)*/, '/')),
    doc_comment: _ => token(seq('///', /[^\n]*/)),

    // ---------------------------------------------------------------- items
    _item: $ => choice(
      $.use_declaration,
      $.package_declaration,
      $.module_declaration,
      $.function_declaration,
      $.struct_declaration,
      $.enum_declaration,
      $.type_alias,
      $.const_declaration,
      $.impl_block,
      $.trait_declaration,
      $.agent_declaration,
      $.protocol_declaration,
      $.supervisor_declaration,
      $.extern_block,
      $.export_declaration,
      $.macro_declaration,
      $.proc_macro_declaration,
      $.sandbox_declaration,
    ),

    // ---- attributes (v0.27 @tool / v0.30 @computer_use, plus #[derive(...)])
    attribute_at: $ => seq(
      '@',
      field('name', $.identifier),
      '(',
      optional(commaSep1(choice(
        $.named_argument,
        $._expression,
      ))),
      ')',
    ),

    _attribute: $ => choice(
      $.attribute_at,
      $.attribute_hash,
      $.derive_attribute,
    ),

    use_declaration: $ => seq(
      'use',
      $._path,
      optional(seq('as', $.identifier)),
      optional(';'),
    ),

    function_declaration: $ => prec.right(seq(
      repeat($._attribute),
      optional($.visibility),
      optional('unsafe'),
      'fn',
      field('name', $.identifier),
      optional($.generic_parameters),
      $.parameters,
      optional(seq('->', field('return_type', $._type))),
      optional($.effect_clause_kw),
      optional($.where_clause),
      optional(choice(
        seq('=', $._expression),  // export c fn foo() = expr
        repeat1($.requires_clause),
        $.block,
        ';',
      )),
    )),

    parameters: $ => seq(
      '(',
      optional(seq($.parameter, repeat(seq(',', $.parameter)), optional(','))),
      ')',
    ),

    parameter: $ => seq(
      optional('mut'),
      field('name', $.identifier),
      optional(seq(':', field('type', $._type))),
    ),

    generic_parameters: $ => seq(
      '[',
      commaSep1($.generic_parameter),
      ']',
    ),

    generic_parameter: $ => seq(
      $.identifier,
      optional(seq(':', $._type)),
    ),

    struct_declaration: $ => seq(
      repeat($._attribute),
      optional($.visibility),
      'struct',
      field('name', $.identifier),
      optional($.generic_parameters),
      choice(
        seq('{', repeat(seq($.struct_field, optional(','))), '}'),
        seq('(', optional(commaSep1($._type)), ')', optional(';')),
        ';',
      ),
    ),

    struct_field: $ => seq(
      repeat($._attribute),
      optional($.visibility),
      field('name', $.identifier),
      ':',
      field('type', $._type),
    ),

    // ---- enum
    enum_declaration: $ => seq(
      repeat($._attribute),
      optional($.visibility),
      'enum',
      field('name', $.identifier),
      optional($.generic_parameters),
      '{',
      repeat(seq($.enum_variant, optional(','))),
      '}',
    ),

    enum_variant: $ => seq(
      field('name', $.identifier),
      optional(choice(
        seq('(', optional(commaSep1($._type)), ')'),
        seq('{', optional(commaSep1Trailing($.struct_field)), '}'),
      )),
    ),

    // ---- type alias
    type_alias: $ => seq(
      optional($.visibility),
      'type',
      field('name', $.identifier),
      optional($.generic_parameters),
      '=',
      $._type,
      optional(';'),
    ),

    // ---- const
    agent_declaration: $ => seq(
      repeat($._attribute),
      optional($.visibility),
      'agent',
      field('name', $.identifier),
      optional($.agent_ctor_params),
      optional(seq(':', sepBy1('+', $._type))),
      '{',
      repeat($._agent_member),
      '}',
    ),

    agent_ctor_params: $ => seq(
      '(',
      optional(commaSep1($.identifier)),
      ')',
    ),

    _agent_member: $ => choice(
      $.on_handler,
      $.agent_state_field,
      $.function_declaration,
    ),

    agent_state_field: $ => seq(
      optional('state'),
      field('name', $.identifier),
      optional(seq(':', field('type', $._type))),
      optional(seq('=', field('value', $._expression))),
      optional(';'),
    ),

    on_handler: $ => seq(
      'on',
      field('message', $.identifier),
      optional(seq(
        '(',
        optional(commaSep1($.identifier)),
        ')',
      )),
      choice(
        seq('->', $._expression),
        $.block,
      ),
    ),

    // ---- protocol
    protocol_declaration: $ => seq(
      optional($.visibility),
      'protocol',
      field('name', $.identifier),
      '{',
      repeat($.protocol_message),
      '}',
    ),

    protocol_message: $ => seq(
      field('name', $.identifier),
      '(',
      optional(commaSep1($.parameter)),
      ')',
      optional(seq('->', $._type)),
      optional($.effect_clause_kw),
      optional(';'),
    ),

    // ---- supervisor
    supervisor_declaration: $ => seq(
      choice('sup', 'supervisor'),
      field('name', $.identifier),
      optional(seq('(', commaSep($.named_argument), ')')),
      '{',
      repeat($._supervisor_member),
      '}',
    ),

    _supervisor_member: $ => choice(
      $.sup_child,
      $.on_fail_clause,
    ),

    sup_child: $ => seq(
      'child',
      $.identifier,
      '=',
      $._expression,
      optional(';'),
    ),

    on_fail_clause: $ => seq(
      'on_fail',
      '(',
      $.identifier,
      ')',
      '{',
      repeat($._fail_action),
      '}',
    ),

    _fail_action: $ => seq(
      choice(
        seq('restart', optional(seq('up_to', $.integer_literal, 'in', $.duration_literal))),
        seq('backoff', $._expression),
        'detach',
      ),
      optional(';'),
    ),

    // ---- extern (extern { ... } / extern c { ... } / extern js { ... })
    _type: $ => choice(
      $.result_sugar_type,
      $.effect_row_type,
      $._type_no_suffix,
    ),

    path_type: $ => prec.left(seq(
      $._path,
      optional($.generic_arguments_type),
    )),

    generic_arguments_type: $ => seq(
      '[',
      commaSep1($._type),
      ']',
    ),

    _path: $ => prec.left(seq(
      $.identifier,
      repeat(seq(choice('.', '::'), $.identifier)),
    )),

    // ---------------------------------------------------------------- statements / block
    block: $ => seq(
      '{',
      repeat($._statement),
      '}',
    ),

    _statement: $ => choice(
      $.let_statement,
      $.expression_statement,
      $._item,
    ),

    let_statement: $ => seq(
      'let',
      optional('mut'),
      field('name', $._pattern),
      optional(seq(':', field('type', $._type))),
      optional(seq('=', field('value', $._expression))),
      optional(';'),
    ),

    expression_statement: $ => choice(
      seq($._expression, ';'),
      $._expression,
    ),

    // ---------------------------------------------------------------- patterns
    _pattern: $ => choice(
      $.identifier_pattern,
      $.wildcard_pattern,
      $.tuple_pattern,
      $.struct_pattern,
      $.enum_pattern,
      $.literal_pattern,
      $.ref_pattern,
    ),

    enum_pattern: $ => prec.left(1, choice(
      // Path with multiple segments (Shape.Circle), optionally with args
      seq(
        $.identifier,
        repeat1(seq(choice('.', '::'), $.identifier)),
        optional(seq('(', commaSep($._pattern), ')')),
      ),
      // Single identifier MUST be followed by args (otherwise it's
      // identifier_pattern)
      seq(
        $.identifier,
        '(',
        commaSep($._pattern),
        ')',
      ),
    )),

    _expression: $ => choice(
      $._literal,
      $.path_expression,
      $.binary_expression,
      $.unary_expression,
      $.call_expression,
      $.method_call_expression,
      $.field_expression,
      $.index_expression,
      $.assignment_expression,
      $.compound_assignment_expression,
      $.cast_expression,
      $.if_expression,
      $.match_expression,
      $.for_expression,
      $.while_expression,
      $.loop_expression,
      $.return_expression,
      $.break_expression,
      $.continue_expression,
      $.yield_expression,
      $.tuple_expression,
      $.array_expression,
      $.struct_expression,
      $.map_expression,
      $.lambda_expression,
      $.send_expression,
      $.ask_expression,
      $.deadline_expression,
      $.question_expression,
      $.move_expression,
      $.borrow_expression,
      $.spawn_expression,
      $.run_expression,
      $.unsafe_expression,
      $.parenthesized_expression,
      $.macro_invocation,
      $.budget_expression,
      $.arena_expression,
      $.block,
      $.range_expression,
    ),

    path_expression: $ => prec.left(seq(
      $.identifier,
      repeat(seq(choice('.', '::'), $.identifier)),
    )),

    call_expression: $ => prec(15, seq(
      field('function', $._expression),
      field('arguments', $.argument_list),
    )),

    argument_list: $ => seq(
      '(',
      optional(seq(
        choice($.named_argument, $._expression),
        repeat(seq(',', choice($.named_argument, $._expression))),
        optional(','),
      )),
      ')',
    ),

    named_argument: $ => seq(
      field('name', $.identifier),
      ':',
      field('value', $._expression),
    ),

    method_call_expression: $ => prec(15, seq(
      field('receiver', $._expression),
      '.',
      field('method', $.identifier),
      optional($.generic_arguments_type),
      field('arguments', $.argument_list),
    )),

    compound_assignment_expression: $ => prec.right(PREC.assign, seq(
      field('left', $._expression),
      field('operator', choice('+=', '-=', '*=', '/=', '%=', '&=', '|=', '^=', '<<=', '>>=')),
      field('right', $._expression),
    )),

    while_expression: $ => seq(
      'while',
      choice(
        $._expression,
        seq('let', $._pattern, '=', $._expression),
      ),
      field('body', $.block),
    ),

    send_expression: $ => prec.dynamic(1, prec.left(15, seq(
      field('receiver', $._expression),
      '!',
      field('message', $.identifier),
      optional(field('arguments', $.argument_list)),
    ))),

    ask_expression: $ => prec.dynamic(1, prec.left(15, seq(
      field('receiver', $._expression),
      '?',
      field('message', $.identifier),
      optional(field('arguments', $.argument_list)),
    ))),

    // `expr @2s` deadline-bound expression
    deadline_expression: $ => prec.left(13, seq(
      $._expression,
      '@',
      $.duration_literal,
    )),

    // Postfix `?` for Result propagation.
    spawn_expression: $ => prec.right(seq('spawn', $._expression)),
    budget_expression: $ => seq(
      'budget',
      '{',
      repeat($.budget_entry),
      '}',
      'run',
      $.block,
    ),

    budget_entry: $ => seq(
      $.identifier,
      $._expression,
      optional(';'),
    ),

    // ---- arena name { ... } / arena name: expr
    arena_expression: $ => seq(
      'arena',
      field('name', $.identifier),
      choice(
        $.block,
        seq(':', $._expression),
      ),
    ),

    // ---- macro invocation: `name!(args)` or `name!{tokens}` etc.
    //
    // The `!` plus token-tree opener is modeled as a single immediate
    // token (`!(`, `!{`, `![`) so the lexer commits to macro syntax only
    // when the opener follows directly. This distinguishes from
    // send_expression (`recv!Msg(...)` — `!` followed by IDENT).
    //
    // The opener is part of the bang token, so the token_tree body
    // matches the content + matching close brace.
    integer_literal: _ => token(seq(
      /[0-9][0-9_]*/,
      optional(/[iuf](?:8|16|32|64|128)/),
    )),

    float_literal: _ => token(seq(
      /[0-9][0-9_]*\.[0-9][0-9_]*/,
      optional(/f(?:32|64)/),
    )),

    duration_literal: _ => token(seq(/[0-9]+/, /(?:ns|us|ms|s|m|h)/)),

    size_literal: _ => token(seq(/[0-9]+/, /(?:KiB|MiB|GiB|B|k|M)/)),

    string_literal: $ => seq(
      '"',
      repeat(choice(
        $.escape_sequence,
        $.string_interpolation,
        /[^"\\{]+/,
        /\{[^}{]*\}/,
      )),
      '"',
    ),

    char_literal: _ => token(seq("'", choice(seq('\\', /./), /[^'\\]/), "'")),

    boolean_literal: _ => choice('true', 'false'),

    identifier: _ => /[A-Za-z_][A-Za-z0-9_]*/,
  },
});

// ---- helpers ---------------------------------------------------------
function commaSep(rule) {
  return optional(commaSep1(rule));
}
function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)));
}
function commaSep1Trailing(rule) {
  return seq(rule, repeat(seq(',', rule)), optional(','));
}
function sepBy1(sep, rule) {
  return seq(rule, repeat(seq(sep, rule)));
}
